--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-#################
+﻿#################
 ## Eclipse
 #################
 
@@ -7,6 +7,7 @@
 .metadata
 bin/
 tmp/
+*.class
 *.tmp
 *.bak
 *.swp
